Add additional configs to get social images working in X.

--- a/_config.yml
+++ b/_config.yml
@@ -6,6 +6,8 @@ baseurl: ""   # for a project page, set this to "/repo-name"
 # Branding / social defaults
 logo: "/dm2k9_logo.png"
 og_image: "/dm2k9_logo.png"   # default social preview image; override per page with og_image or social_image
+social_image_width: 1200
+social_image_height: 630
 
 # We’re hand-rolling the theme, so no remote theme here
 theme: null
