--- a/_config.yml
+++ b/_config.yml
@@ -8,6 +8,7 @@ logo: "/dm2k9_logo.png"
 og_image: "/dm2k9_logo.png"   # default social preview image; override per page with og_image or social_image
 social_image_width: 1200
 social_image_height: 630
+twitter_username: "@decentmoney2009"
 
 # We’re hand-rolling the theme, so no remote theme here
 theme: null
